# django-mailing

./: .env.sample  .gitignore  README.md  mailing_data.json  pyproject.toml  requirements.txt  services.py
blog/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/post/: post_all.html  post_confirm_delete.html  post_detail.html  post_form.html  post_form1.html  post_list.html
config/: settings.py  urls.py
fixtures/: clients.json  mailings.json  messages.json  users.json
logic/: admin.py  apps.py  forms.py  models.py  tasks.py  urls.py  views.py
logic/migrations/: 0001_created_models_for_mailing.py  0002_edit_mailing.py  0003_delete_status_from_mailing.py  0004_edit_attempt_model.py  0005_client_owner_mailing_owner_message_owner.py  0006_blogpost.py
mailing/: admin.py  apps.py  asgi.py  forms.py  models.py  receivers.py  scheduler1.py  services1.py  settings.py  urls.py  views.py  wsgi.py
mailing/migrations/: 0001_initial.py  0002_initial.py
mailing/templates/mailing/: client_confirm_delete.html  client_detail.html  client_form.html  client_list.html  index.html  mailing_confirm_delete.html  reserv.html  (+8 more)
mailing/templatetags/: mailing_tags.py
staticfiles/css/: headers.css
staticfiles/js/: jquery-3.6.0.min.js
templates/logic/: add_client.html  add_mailing.html  add_message.html  attempt.html  blog_detail.html  blog_list.html  home.html  mailing_report.html  success.html
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_managers.py
(+9 files in other folders)
